Add method exceptions